# tutorial_dd4hep_24

./: CMakeLists.txt  README.md  steering.py
compact/: materials.xml  simple_detector.xml
plugin/: neutronSDAction.cpp
plugins/: neutronSDAction.cpp
scripts/: vis.mac  vis_ddsim_qt.sh
src/: simple_detector.cpp
